# routes/commentRoutes.js
@@ -1,16 +1,10 @@
 // routes/commentRoutes.js
+const express = require('express');
+const router = express.Router();
+const commentController = require('../controllers/CommentController');
+const authMiddleware = require('../middleware/authMiddleware');
 
-const express = require('express')
-const router = express.Router()
+router.post('/', authMiddleware.authenticateUser, commentController.createComment);
+router.get('/', commentController.getAllComments);
 
-// Controladores de comentarios
-const commentController = require('../controllers/CommentController.js')
-
-// Rutas para los comentarios
-router.post('/', commentController.createComment)
-router.get('/', commentController.getAllComments)
-router.get('/:commentId', commentController.getCommentById)
-router.put('/:commentId', commentController.updateCommentById)
-router.delete('/:commentId', commentController.deleteCommentById)
-
-module.exports = router
+module.exports = router;
