# routes/userRoutes.js
@@ -1,15 +1,10 @@
 // routes/userRoutes.js
-const express = require('express')
-const router = express.Router()
+const express = require('express');
+const router = express.Router();
+const userController = require('../controllers/UserController');
+const authMiddleware = require('../middleware/authMiddleware');
 
-// Controladores de usuarios
-const userController = require('../controllers/userController.js')
+router.post('/', userController.createUser);
+router.get('/', authMiddleware.authenticateUser, userController.getAllUsers);
 
-// Rutas para los usuarios
-router.post('/register', userController.registerUser)
-router.post('/login', userController.loginUser)
-router.get('/:userId', userController.getUserById)
-router.put('/:userId', userController.updateUser)
-router.delete('/:userId', userController.deleteUser)
-
-module.exports = router
+module.exports = router;
